samples/_failures_safe/1761076167_f16372_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_133ba668.c: In function ‘main’:
./samples/SAFE/__tmp_133ba668.c:164:5: error: expected declaration or statement at end of input
  164 |     bfs(&graph, start_node);
      |     ^~~
